# labelkit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
labelkit/: __init__.py  backends.py  cli.py  config.py  datasets.py  env_loader.py  rules.py  store.py  train_runner.py  visualize.py  yolo_io.py
labelkit/tasks/: export.py  fix.py  label.py  review.py  train_worker.py  yolo_train.py
labelkit/webapp/: app.py
labelkit/webapp/templates/: review.html
projects/: gazi-yolo.local.env.example  gazi-yolo.yaml
scripts/: export_gazi.py
